# open-volume-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
apps/: CMakeLists.txt  cmdline.h  main_app.cpp  main_batch.cpp
data/: scene_setting.usda
data/configs/: inr_python_test.json  scene_beechnut.json  scene_body.json  scene_bonsai.json  scene_chameleon.json  scene_engine.json  scene_full_body_ct.json  scene_fullbody_petct.json  scene_heatrelease_1atm.json  scene_heatrelease_1atm_redbull.json  scene_lung.json  scene_mechhand.json  scene_mechhand_closeup.json  scene_skull.json  scene_skull_bone.json  scene_supernova.json  scene_teapot.json  scene_vorts1.json  scene_vorts1_closeup.json  scene_vorts25.json  scene_vorts_t83.json  scene_woodbranch.json  scene_zebrafish.json
data/data/: vorts1.json
ovr/: CMakeLists.txt  imageop.h  renderer.cpp  renderer.h  renderer_macro.h  scene.cpp  scene.h
ovr/common/: cross_device_buffer.h  evaluation_kernel.h  generate_mask.cpp  generate_mask.cu  generate_mask.h  imageio.cpp  imageio.h  math_def.h  vidi_async_loop.h  vidi_filemap.h  vidi_fps_counter.h  vidi_highperformance_timer.h  vidi_logger.h  vidi_logger_1.h  vidi_parallel_algorithm.h  vidi_progress_bar.h  vidi_screenshot.h  vidi_transactional_value.h  vidi_volume_reader.h
ovr/common/cuda/: cuda_buffer.h  cuda_math.h  cuda_misc.h  texture.cu  texture.h
ovr/common/dylink/: Library.cpp  Library.h  ObjectFactory.h
ovr/common/random/: blue_noise.h  pcg32.h  random.h
ovr/devices/optix7/: CMakeLists.txt  array.cpp  array.h  compute.cu  device.cpp  device.h  device_impl.cpp  device_impl.h  optix7_common.h  params.h  shaders_common.h  shaders_pathtracing.cu  shaders_raymarching.cu  volume.cpp  volume.h
ovr/devices/optix7/accel/: dda.h  sp_singlemc.cu  spatial_partition.h
ovr/devices/optix7/unused/: method_optix.cu  optix_program.h
ovr/devices/ospray/: CMakeLists.txt  device.cpp  device.h  device_impl.cpp  device_impl.h
ovr/imageops/: imageop.cpp  imageop.h  optix7_denoiser.cpp  optix7_denoiser.h
ovr/serializer/: serializer.h  serializer_diva.cpp  serializer_json.cpp  serializer_usda.cpp  serializer_vidi3d.cpp
projects/: CMakeLists.txt
projects/experiment/: _CMakeLists.txt
projects/experiment/mini_optix7/: .clang-format  CMakeLists.txt  Renderer.h  cuda_common.h  main.cpp  renderer.cpp  renderer.cu  volume.cpp  volume.h
projects/experiment/mini_ospray/: CMakeLists.txt  common_host.h  diva_constants.h  diva_serializable.h  mini_ospray.cpp
projects/experiment/mini_pytorch/: CMakeLists.txt  example.cpp  example.py
projects/experiment/mini_tensorrt/: CMakeLists.txt  torch2rt.cpp
python/: CMakeLists.txt  python.cpp  python.h
scripts/: build_regent.sh  build_release.bat  build_release.sh  build_vkl.sh  run.sh
test/: test_python_bindings.py  test_scene.json
vscode/: david-linux-launch.json  david-linux-settings.json  qi-linux-launch.json  qi-linux-settings.json  qi-win-launch.json  qi-win-settings.json
